# image-cpp-sdk-v2.0

./: CMakeLists.txt  README.md  image_demo.cpp
include/: Auth.h  ImageApi.h  ImageConfig.h  ImageDefines.h  ImageParams.h  ImageSysConfig.h
include/op/: BaseOp.h  DetectionOp.h  FaceManagerOp.h  FaceOp.h  OcrOp.h
include/request/: FaceManagerReq.h  FaceReq.h  ImageResult.h  OcrReq.h  PornDetectReq.h  ReqBase.h  TagDetectReq.h
include/util/: CodecUtil.h  FileUtil.h  HttpSender.h  Sha1.h  StringUtil.h  true_random.h
src/: Auth.cpp  CMakeLists.txt  ImageApi.cpp  ImageSysConfig.cpp
src/op/: DetectionOp.cpp  FaceManagerOp.cpp  FaceOp.cpp  OcrOp.cpp
src/request/: ImageResult.cpp
src/util/: CodecUtil.cpp  FileUtil.cpp  HttpSender.cpp  Sha1.cpp  StringUtil.cpp  true_random.cpp
